# smartParsePro-py

./: README.md  index.py  pyproject.toml
addressrec/: __init__.py
addressrec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
